correction ont the loader z-index

--- a/src/app/components/Preloader/loader.module.scss
+++ b/src/app/components/Preloader/loader.module.scss
@@ -4,7 +4,7 @@
   width: 100%;
   background-color: $darkText;
   position: absolute;
-  z-index: 2;
+  z-index: 10;
   display: flex;
   align-items: center;
   justify-content: center;
